--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienes Raíces MultiCasa - Tu mejor opción en agencia de bienes raíces</title>
     <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
     <div class="container">
@@ -20,7 +21,7 @@
                 </div>
             </div>
             <div class="contact-box">
-                <span class="phone-icon">📞</span>
+                <i class="fas fa-phone phone-icon"></i>
                 <span>LLama al:</span>
                 <a href="tel:1-800-123-4567">1-800-123-4567</a>
             </div>
@@ -32,7 +33,7 @@
             <a href="#compania">La Compañía</a>
             <a href="#servicios">Servicios</a>
             <a href="#requisitos">Requisitos</a>
-            <a href="#contactos">Contactos</a>
+            <a href="contactos.html">Contactos</a>
         </nav>
 
         <!-- Hero Section -->
@@ -49,9 +50,9 @@
                 </div>
             </div>
             <div class="user-menu">
-                <button>🏠 Inicio</button>
-                <button type="button" class="user-search-btn" onclick="window.location.href='search.html'">🔍 Buscar</button>
-                <button>👤 Admin.</button>
+                <button><i class="fas fa-home"></i> Inicio</button>
+                <button type="button" class="user-search-btn" onclick="window.location.href='search.html'"><i class="fas fa-search"></i> Buscar</button>
+                <button type="button" onclick="window.location.href='login.html'"><i class="fas fa-user"></i> Admin</button>
             </div>
         </div>
 
@@ -81,24 +82,24 @@
                     <h2>SERVICIOS DESTACADOS</h2>
                     
                     <div class="service-item">
-                        <p>Hello. In this tutorial i will show you how to create an elegant WordPress PSD theme. You can use this web template also for consulting agency templates, services websites, marketing website templates, business website templates, finance website templates. The design is very clean and can be modified very easy into a great template.. <a href="#">➡️ Ver Más...</a></p>
+                        <p>Hello. In this tutorial i will show you how to create an elegant WordPress PSD theme. You can use this web template also for consulting agency templates, services websites, marketing website templates, business website templates, finance website templates. The design is very clean and can be modified very easy into a great template.. <a href="#"><i class="fas fa-arrow-right"></i> Ver Más...</a></p>
                     </div>
 
                     <div class="service-item">
-                        <p>Hello. In this tutorial i will show you how to create an elegant WordPress PSD theme. You can use this web template also for consulting agency templates, services websites, marketing website templates, business website templates, finance website templates. The design is very clean and can be modified very easy into a great template.. <a href="#">➡️ Ver Más...</a></p>
+                        <p>Hello. In this tutorial i will show you how to create an elegant WordPress PSD theme. You can use this web template also for consulting agency templates, services websites, marketing website templates, business website templates, finance website templates. The design is very clean and can be modified very easy into a great template.. <a href="#"><i class="fas fa-arrow-right"></i> Ver Más...</a></p>
                     </div>
 
                     <div class="service-item">
-                        <p>Hello. In this tutorial i will show you how to create an elegant WordPress PSD theme. You can use this web template also for consulting agency templates, services websites, marketing website templates, business website templates, finance website templates. The design is very clean and can be modified very easy into a great template.. <a href="#">➡️ Ver Más...</a></p>
+                        <p>Hello. In this tutorial i will show you how to create an elegant WordPress PSD theme. You can use this web template also for consulting agency templates, services websites, marketing website templates, business website templates, finance website templates. The design is very clean and can be modified very easy into a great template.. <a href="#"><i class="fas fa-arrow-right"></i> Ver Más...</a></p>
                     </div>
                 </div>
 
                 <!-- Links Section -->
                 <div class="links-section">
-                    <a href="#">➡️ Preguntas Frecuentes</a>
-                    <a href="#">➡️ Tips Para Antes De Comprar</a>
-                    <a href="#">➡️ Políticas De Calidad</a>
-                    <a href="#">➡️ ISO-9001-2012</a>
+                    <a href="#"><i class="fas fa-arrow-right"></i> Preguntas Frecuentes</a>
+                    <a href="#"><i class="fas fa-arrow-right"></i> Tips Para Antes De Comprar</a>
+                    <a href="#"><i class="fas fa-arrow-right"></i> Políticas De Calidad</a>
+                    <a href="#"><i class="fas fa-arrow-right"></i> ISO-9001-2012</a>
                 </div>
             </div>
 
@@ -110,7 +111,7 @@
                     <li><a href="#">VENTA</a></li>
                     <li><a href="#">MUDANZAS</a></li>
                     <li><a href="#">SEGUROS</a></li>
-                    <li><a href="#">CONTACTOS</a></li>
+                    <li><a href="contactos.html">CONTACTOS</a></li>
                 </ul>
 
                 <!-- Search Box -->
@@ -180,7 +181,7 @@
 
                 <!-- Stats -->
                 <div class="stats">
-                    <p>📊 Conectados: 674<br>👁️ Visitas:</p>
+                    <p><i class="fas fa-chart-bar"></i> Conectados: 674<br><i class="fas fa-eye"></i> Visitas:</p>
                     <div class="counter">
                         <span>0</span>
                         <span>7</span>
@@ -211,7 +212,7 @@
                     <span class="bullet">:</span>
                     <a href="#">Seguros</a>
                     <span class="bullet">:</span>
-                    <a href="#">Contactos</a>
+                    <a href="contactos.html">Contactos</a>
                 </div>
             </div>
             <div class="footer-info">
