--- a/templates/search.html
+++ b/templates/search.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscar Propiedades - MultiCasa</title>
     <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
     <div class="container">
@@ -13,7 +14,7 @@
             <a href="index.html#compania">La Compañía</a>
             <a href="index.html#servicios">Servicios</a>
             <a href="index.html#requisitos">Requisitos</a>
-            <a href="index.html#contactos">Contactos</a>
+            <a href="contactos.html">Contactos</a>
         </nav>
 
         <div class="main-content">
@@ -81,7 +82,7 @@
                     <p>Combina ubicación y rango de precio para mejores resultados.</p>
                 </div>
                 <div class="stats">
-                    <p>📊 Conectados: 674<br>👁️ Visitas:</p>
+                    <p><i class="fas fa-chart-bar"></i> Conectados: 674<br><i class="fas fa-eye"></i> Visitas:</p>
                     <div class="counter">
                         <span>0</span><span>7</span><span>8</span><span>9</span><span>9</span>
                     </div>
