--- a/templates/index.html
+++ b/templates/index.html
@@ -116,6 +116,8 @@
 
                 <!-- Search Box -->
                 <form class="search-box search-page">
+                <input type="hidden" id="user_lat" name="user_lat">
+                <input type="hidden" id="user_lon" name="user_lon">
                     <div class="form-group">
                         <label>Ciudad / Estado / C.P.</label>
                         <input type="text" name="ubicacion">
@@ -152,14 +154,14 @@
                     </div>
                     <div class="form-group">
                         <label>Baños</label>
-                        <select name="banos">
+                        <select name="baños">
                             <option value="">Cualquiera</option>
                             <option>1</option>
                             <option>2</option>
                             <option>3+</option>
                         </select>
                     </div>
-                    <button class="search-btn" type="submit">Buscar</button>
+                    <button class="search-btn" type="button">Buscar</button>
                 </form>
 
                 <!-- Info Boxes -->
@@ -223,5 +225,6 @@
     </div>
 
     <script src="../static/js/scripts.js"></script>
+    <script src="/static/js/geoloc.js"></script>
 </body>
 </html>
