--- a/templates/index.html
+++ b/templates/index.html
@@ -51,8 +51,8 @@
             </div>
             <div class="user-menu">
                 <button><i class="fas fa-home"></i> Inicio</button>
-                <button type="button" class="user-search-btn" onclick="window.location.href='search.html'"><i class="fas fa-search"></i> Buscar</button>
-                <button type="button" onclick="window.location.href='login.html'"><i class="fas fa-user"></i> Admin</button>
+                <button type="button" class="user-search-btn" onclick="window.location.href='/buscar'"><i class="fas fa-search"></i> Buscar</button>
+                <button type="button" onclick="window.location.href='/login'"><i class="fas fa-user"></i> Admin</button>
             </div>
         </div>
 
@@ -111,7 +111,7 @@
                     <li><a href="#">VENTA</a></li>
                     <li><a href="#">MUDANZAS</a></li>
                     <li><a href="#">SEGUROS</a></li>
-                    <li><a href="contactos.html">CONTACTOS</a></li>
+                    <li><a href="/contactos">CONTACTOS</a></li>
                 </ul>
 
                 <!-- Search Box -->
@@ -214,7 +214,7 @@
                     <span class="bullet">:</span>
                     <a href="#">Seguros</a>
                     <span class="bullet">:</span>
-                    <a href="contactos.html">Contactos</a>
+                    <a href="/contactos">Contactos</a>
                 </div>
             </div>
             <div class="footer-info">
