--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,7 @@
                             <option>1</option>
                             <option>2</option>
                             <option>3</option>
-                            <option>4+</option>
+                            <option value="4+">4+</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -158,7 +158,7 @@
                             <option value="">Cualquiera</option>
                             <option>1</option>
                             <option>2</option>
-                            <option>3+</option>
+                            <option value="3+">3+</option>
                         </select>
                     </div>
                     <button id="btnBuscar" class="search-btn" type="button">Buscar</button>
