Correción navegacion contactos main

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
             <a href="#compania">La Compañía</a>
             <a href="#servicios">Servicios</a>
             <a href="#requisitos">Requisitos</a>
-            <a href="contactos.html">Contactos</a>
+            <a href="/contactos">Contactos</a>
         </nav>
 
         <!-- Hero Section -->
