--- a/templates/search.html
+++ b/templates/search.html
@@ -6,7 +6,12 @@
     <title>Buscar Propiedades - MultiCasa</title>
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+ 
+
 </head>
+
 <body>
     <div class="container">
         <nav class="nav">
@@ -80,21 +85,10 @@
                     </form>
 
                     <!-- Resultados -->
-                    <div id="resultados" style="margin-top:30px;">
-                        <h3>Resultados</h3>
-                        {% if resultados %}
-                            <ul>
-                            {% for casa in resultados %}
-                                <li>
-                                    {{ casa['locacion'] }} - ${{ casa['costo'] }} - {{ casa['recamaras'] }} recámaras / {{ casa['baños'] }} baños
-                                    {% if casa.get('distancia_km') %}- {{ casa['distancia_km'] | round(2) }} km{% endif %}
-                                </li>
-                            {% endfor %}
-                            </ul>
-                        {% else %}
-                            <p>Ingresa criterios y presiona Buscar.</p>
-                        {% endif %}
-                    </div>
+
+                    <!-- Contenedor del mapa -->
+                    <div id="mapa" style="height: 500px; margin-top:30px;"></div>
+
 
                 </div>
             </div>
@@ -134,5 +128,9 @@
     </div>
 
     <script src="../static/js/scripts.js"></script>
+    <script id="resultados-data" type="application/json">
+    {{ resultados | tojson | safe }}
+    </script>
+    <script src="{{ url_for('static', filename='js/mapa.js') }}"></script>
 </body>
 </html>
