Busqueda de propiedades, PDF ficha tecnica casa

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <div class="header">
             <div class="logo-section">
                 <div class="logo-circle">
-                    <img src="../images/logotipo.png" alt="Logo MultiCasa" class="logo-icon">
+                    <img src="{{ url_for('static', filename='images/logotipo.png') }}" alt="Logo MultiCasa" class="logo-icon">
                 </div>
                 <div class="logo-text">
                     <h1>BIENES RAICES MULTICASA</h1>
@@ -199,7 +199,7 @@
         <footer class="footer">
             <div class="footer-logo">
                 <div class="logo-circle footer-size">
-                    <img src="../images/logotipo.png" alt="Logo MultiCasa" class="logo-icon">
+                    <img src="{{ url_for('static', filename='images/logotipo.png') }}" alt="Logo MultiCasa" class="logo-icon">
                 </div>
                 <div class="footer-nav">
                     <a href="#">Inicio</a>
